--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -31,12 +31,11 @@ $body-height: 100%;
 $app-padding: 3rem;
 $app-height: 100%;
 
-$nav-height: 10%;
 $nav-button-width: 8rem;
 
-$view-height: 90%;
+$view-height: 100%;
 
-$container-padding: 3rem;
+$container-padding: 3rem 0;
 
 $button-separation: 1rem;
 $button-internal-padding: 0.5rem 1rem;
@@ -65,6 +64,10 @@ h1, h2, h3, h4, h5, h6 {
 
 .app-container {
 
+  //display: flex;
+  //align-items: center;
+  //justify-content: center;
+  //flex-wrap: wrap;
   padding: $app-padding;
   height: $app-height;
   box-sizing: border-box;
@@ -77,7 +80,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .container {
 
-  padding: $container-padding 0;
+  padding: $container-padding;
   box-sizing: border-box;
 
   &.center {
@@ -270,6 +273,8 @@ h1, h2, h3, h4, h5, h6 {
 
 .projects {
   display: inline-block;
+  max-width: 60rem;
+  box-sizing: border-box;
 
   margin-top: -5rem;
   padding: 2rem;
@@ -277,7 +282,6 @@ h1, h2, h3, h4, h5, h6 {
   color: $projects-text-color;
 
   .project {
-
     .title {
 
       font-family: "Moon";
